--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'Strindberg, August, 1849-1912'
 - !lcsh 'Autobiographical fiction'
+- GITenberg
 title: Inferno; Legenden
 url: http://www.gutenberg.org/ebooks/45916
